@@ -3,5 +3,6 @@
 (TeX-add-style-hook
  "czech"
  (lambda ()
-   (setq TeX-quote-language `("czech" "\\uv{" "}" ,TeX-quote-after-quote))
+   (unless (eq (car TeX-quote-language) 'override)
+     (setq TeX-quote-language `("czech" "\\uv{" "}" ,TeX-quote-after-quote)))
    (run-hooks 'TeX-language-cz-hook)))
