@@ -41,7 +41,8 @@
  "polish"
  (lambda ()
    (set-syntax-table LaTeX-polish-mode-syntax-table)
-   (setq TeX-quote-language '("polish" "\"`" "\"'" t))
+   (unless (eq (car TeX-quote-language) 'override)
+     (setq TeX-quote-language '("polish" "\"`" "\"'" t)))
    ;; Fontification of quotation marks.
    (when (fboundp 'font-latex-add-quotes)
      (font-latex-add-quotes '("\"`" "\"'"))
