@@ -7,7 +7,8 @@
 (TeX-add-style-hook
  "swedish"
  (lambda ()
-   (setq TeX-quote-language
-	 `("swedish" "''" ,TeX-close-quote ,TeX-quote-after-quote))
+   (unless (eq (car TeX-quote-language) 'override)
+     (setq TeX-quote-language
+	   `("swedish" "''" ,TeX-close-quote ,TeX-quote-after-quote)))
    (setq LaTeX-babel-hyphen-language "swedish")
    (run-hooks 'TeX-language-sv-hook)))
